doc: payments
